# VidDub

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  _check_db.py  docker-compose.yml  setup.ps1  setup.sh  start.bat  start.ps1  start.sh
backend/: .env.example  .gitignore  alembic.ini  biliup_login.py  pyproject.toml  pytest.ini  requirements.txt  start_server.py  test_douyin_publish.py
backend/alembic/: env.py
backend/alembic/versions/: 85e4114b41ec_init.py  a1b2c3d4e5f6_phase7_publish_record.py  b8c9d0e1f2a3_phase8_ai_title_fields.py  c9d0e1f2a3b4_phase9_channels_scanlogs.py  d4c2e8a1b3f5_add_subtitles.py  e2f3a4b5c6d7_drop_ixigua.py  e6f7a8b2c4d0_add_dubbed_filepath.py  e7f8a9b0c3d1_backfill_thumbnail_url.py  f8a9b0c3d1e2_phase4_dubbing_pipeline.py
backend/app/: cli.py  main.py  uploader.py
backend/app/api/: analytics.py  channels.py  config.py  discovery.py  dub.py  export.py  platform.py  publish.py  router.py  rules.py  scoring.py  stats.py  subtitles.py  tasks.py  title.py  transcription.py  tts.py  videos.py  voice_clone.py
backend/app/core/: config.py  database.py  storage.py  websocket.py
backend/app/models/: __init__.py  base.py  channel.py  config.py  content_rule.py  discovery.py  discovery_scan_log.py  enums.py  performance_log.py  publish_record.py  scan_log.py  subtitle.py  task.py  video.py  video_score.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  channel_scanner.py  config_seeder.py  discovery_scanner.py  scheduler.py  title_generator.py  whisper_service.py  youtube.py  ytdlp_wrapper.py
backend/app/services/dubbing/: __init__.py  alignment.py  audio_separation.py  composer.py  ffmpeg.py  paths.py  pipeline.py  stitcher.py  subtitle_burn.py  voice_cloner.py
backend/app/services/platform/: __init__.py  base.py  bilibili.py  douyin.py  ixigua.py  kuaishou.py  manager.py  tencent.py  xiaohongshu.py
backend/app/services/publish/: __init__.py  base.py  bili_direct.py  cookie_bridge.py  douyin.py  ixigua.py  kuaishou.py  manager.py  sau_bilibili.py  tencent.py  title_translate.py  xiaohongshu.py
backend/app/services/scoring/: classifier.py  condition_evaluator.py  discovery.py  discovery_pipeline.py  metrics.py  performance.py  rule_engine.py  scorer.py
backend/app/services/siliconflow/: __init__.py  (+3 more)
backend/data/login/: bilibili_storage_state.json
backend/tests/: conftest.py  test_api.py  test_douyin_publish.py  test_integration.py  test_transcription.py  test_tts.py  test_voice_cloner.py
backend/tests/fixtures/: stt_smoke_result.json
backend/tests/integration/: test_e2e_dub.py  test_migration.py  test_phase10_e2e.py
backend/tests/unit/: test_alignment.py  test_discovery.py  test_ffmpeg_cmd.py  test_paths.py  test_performance.py  test_phase5_endpoints.py  test_phase6_platform_login.py  test_phase7_publish.py  test_phase8_ai_title.py  test_phase9_scan_thumbnail.py  test_phase9_schedule_batch.py  test_phase9_source_filters.py  test_rule_engine.py  test_sau_bilibili_publisher.py  test_scoring.py  test_sf_client.py  test_sf_transcriber.py  test_sf_translator.py  test_sf_tts.py
(+92 files in other folders)
