[project]
name = "viddub-backend"
version = "5.0.0"
description = "VidDub backend — YouTube video Chinese dubbing + multi-platform auto-publish"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy[asyncio]==2.0.35",
    "aiosqlite==0.20.0",
    "alembic==1.13.0",
    "pydantic-settings==2.5.0",
    "websockets==13.0",
    "python-multipart==0.0.12",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.12.0",
    "openai-whisper>=20231117",
    "openai>=1.40",
    "httpx>=0.28.1",
    "tenacity>=8.5",
    "edge-tts>=6.1",
    "playwright>=1.40",
    "qrcode>=7.4",
    "pillow>=10.0",
    "APScheduler>=3.10",
    "patchright==1.58.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

# uv dependency groups — used by `uv sync --group dev`
# https://docs.astral.sh/uv/concepts/dependencies/#dependency-groups
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests",
    "e2e: end-to-end tests (slow, external dependencies)",
    "slow: marks tests as slow",
]

# No [build-system]: this is an application, not a library.
# uv will install dependencies without attempting to build the package.
# If you need to build, add:
# [build-system]
# requires = ["setuptools>=64"]
# build-backend = "setuptools.build_meta"
